--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- secondo container -->
         <div class="container-2">
             <aside class="box sinistra"></aside>
-            <aside class="box centrale"></aside>
+            <div class="box centrale"></div>
             <aside class="box destra"></aside>
 
         </div>
