--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                 </ul>
             </nav>
 
-            <div class="jumbotron"></div>
+            <div class="jumbotron">
+                <span class="jumbo-text"><strong id="jumbo-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong> <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum magnam nihil eum, dolorem tempore accusamus doloremque exercitationem aspernatur voluptas.</span> 
+
+            </div>
         </header>
 
         <!-- inizio main -->
