--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
                     <li><a href="#">contact</a></li>
                 </ul>
             </nav>
-
             <div class="jumbotron">
-                <span class="jumbo-text"><strong id="jumbo-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong> <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum magnam nihil eum, dolorem tempore accusamus doloremque exercitationem aspernatur voluptas.</span> 
+                <div class="background-grigio">
+                     <span class="jumbo-text"><strong id="jumbo-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong> <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum magnam nihil eum, dolorem tempore accusamus doloremque exercitationem aspernatur voluptas.</span> 
 
+                </div>
             </div>
         </header>
 
         <!-- inizio main -->
         <main>
-
-            <!-- secondo container -->
+            <h2>leadership</h2>
+            <!-- inizio tendine -->
             <div class="tendine">
                 <aside class="box sinistra"></aside>
                 <div class="box centrale"></div>
