--- a/index.html
+++ b/index.html
@@ -34,12 +34,29 @@
 
         <!-- inizio main -->
         <main>
-            <h2>leadership</h2>
+            <h1 >Leadership</h1>
+            <div class="text">Ferterum urna libero tempus</div>
             <!-- inizio tendine -->
             <div class="tendine">
-                <aside class="box sinistra"></aside>
-                <div class="box centrale"></div>
-                <aside class="box destra"></aside>
+                <aside class="box sinistra">
+                    <div class="img-1">
+                        <div class="background-grigio"></div>
+                    </div>
+                    <div>lorem <br> <span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, nemo? Quasi quisquam eos placeat sequi, in ea officia, numquam vero rerum tempore incidunt facilis asperiores obcaecati iusto alias iste earum.</span></div>
+                </aside>
+                <div class="box centrale">
+                    <div class="img-2">
+                        <div class="background-grigio"></div>
+                    </div>
+                    <div>lorem <br> <span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, nemo? Quasi quisquam eos placeat sequi, in ea officia, numquam vero rerum tempore incidunt facilis asperiores obcaecati iusto alias iste earum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci inventore perferendis, repellat officiis exercitationem laudantium cum esse architecto necessitatibus reiciendis hic asperiores iusto ad odio magni sit aspernatur dicta vero? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste laboriosam nesciunt error tenetur quidem nemo cumque ea? Voluptate aspernatur neque id delectus quae architecto. Eaque earum laborum non provident at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, eos iusto asperiores necessitatibus debitis deleniti, ratione, nostrum error autem ex aliquid ut ab eum enim expedita provident laborum? Iusto, quis.</span></div>
+                </div>
+                <aside class="box destra">
+                    <div class="img-3">
+                        <div class="background-grigio"></div>
+                        <div>lorem <br> <span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, nemo? Quasi quisquam eos placeat sequi, in ea officia, numquam vero rerum tempore incidunt facilis asperiores obcaecati iusto alias iste earum.</span></div>
+                    </div>
+
+                </aside>
 
             </div>
         </main>
