--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="logo">
                 
             </div>
+            <!-- lista navigazione -->
             <nav>
                 <ul>
                     <li><a href="#">featur</a></li>
@@ -24,6 +25,8 @@
                     <li><a href="#">contact</a></li>
                 </ul>
             </nav>
+
+            <!-- inizio jumbotron -->
             <div class="jumbotron">
                 <div class="background-grigio">
                      <span class="jumbo-text"><strong id="jumbo-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong> <br> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum magnam nihil eum, dolorem tempore accusamus doloremque exercitationem aspernatur voluptas.</span> 
@@ -38,24 +41,31 @@
             <div class="text">Ferterum urna libero tempus</div>
             <!-- inizio tendine -->
             <div class="tendine">
+                <!-- box sinistra -->
                 <aside class="box sinistra">
                     <div class="img-1">
                         <div class="background-grigio"></div>
                     </div>
                     <div>lorem <br> <span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, nemo? Quasi quisquam eos placeat sequi, in ea officia, numquam vero rerum tempore incidunt facilis asperiores obcaecati iusto alias iste earum.</span></div>
                 </aside>
+                <!-- fine box sinistra -->
+
+                <!-- box centro -->
                 <div class="box centrale">
                     <div class="img-2">
                         <div class="background-grigio"></div>
                     </div>
                     <div>lorem <br> <span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, nemo? Quasi quisquam eos placeat sequi, in ea officia, numquam vero rerum tempore incidunt facilis asperiores obcaecati iusto alias iste earum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci inventore perferendis, repellat officiis exercitationem laudantium cum esse architecto necessitatibus reiciendis hic asperiores iusto ad odio magni sit aspernatur dicta vero? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste laboriosam nesciunt error tenetur quidem nemo cumque ea? Voluptate aspernatur neque id delectus quae architecto. Eaque earum laborum non provident at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, eos iusto asperiores necessitatibus debitis deleniti, ratione, nostrum error autem ex aliquid ut ab eum enim expedita provident laborum? Iusto, quis.</span></div>
                 </div>
+                <!-- fine box centro -->
+
+                <!-- box destra -->
                 <aside class="box destra">
                     <div class="img-3">
                         <div class="background-grigio"></div>
                         <div>lorem <br> <span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, nemo? Quasi quisquam eos placeat sequi, in ea officia, numquam vero rerum tempore incidunt facilis asperiores obcaecati iusto alias iste earum.</span></div>
                     </div>
-
+                    <!-- fine box destra -->
                 </aside>
 
             </div>
